--- a/package.json
+++ b/package.json
@@ -3,35 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
+    "postinstall": "prisma generate",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^4.1.1",
-    "@trpc/client": "^9.27.0",
-    "@trpc/next": "^9.27.0",
-    "@trpc/react": "^9.27.0",
-    "@trpc/server": "^9.27.0",
-    "next": "12.2.3",
+    "@prisma/client": "^4.3.0",
+    "@trpc/client": "^9.27.2",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
+    "@types/lodash": "^4.14.184",
+    "classnames": "^2.3.1",
+    "copy-to-clipboard": "^3.3.2",
+    "lodash": "^4.17.21",
+    "nanoid": "^4.0.0",
+    "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
     "superjson": "^1.9.1",
-    "zod": "^3.17.3"
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
+    "@types/node": "18.7.14",
+    "@types/react": "18.0.18",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "autoprefixer": "^10.4.8",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.3",
+    "eslint": "8.23.0",
+    "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
-    "prisma": "^4.1.1",
+    "prisma": "^4.3.0",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.8.2"
+  },
+  "ct3aMetadata": {
+    "initVersion": "5.9.0"
   }
 }
